tests/compile-errors/src/relative-import.stderr
error: Use-statements in USDT macros cannot contain relative imports (`super`), because the generated macros may be called from anywhere in a crate. Consider using `crate` instead.
  --> src/relative-import.rs:14:9
   |
14 |     use super::Expected;
   |         ^^^^^^^^^^^^^^^

error[E0433]: failed to resolve: use of undeclared crate or module `my_provider`
  --> src/relative-import.rs:19:5
   |
19 |     my_provider::my_probe!(|| Different { x: 0 });
   |     ^^^^^^^^^^^ use of undeclared crate or module `my_provider`
